
Viewfield 7.x-2.x, xxxx-xx-xx
-----------------------------
#1230534 by keithm, sun: Changed allowed_views to be an instance setting.
#1230360 by keithm: Changed to remove custom token support.
#1230414 by sun: Fixed force_default to be independent of cardinality.
#1071212 by sun, keithm, imclean: Fixed viewfield rendering and theming support.
#1216684 by sun: Merged include files into .module.
#1230364 by sun, keithm: Fixed view select in field widget is removed when there
  is only one option.
#1230316 by sun: Fixed disabled views can be selected.
#1221440 by sun, keithm: Fixed bogus default value in field widget.
#1181226 by sun, keithm, ConradFlashback: Changed to remove
  viewfield_views_query_alter().
#1207552 by sun, keithm: Changed to use instance defaults with force_default.
#1209804 by sun, keithm: Changed force_default from widget to instance settings.
#311587 by sun, keithm: Fixed force default handling again.
#311587 by keithm: Fixed force default handling.
#1048516 by GoZ, keithm: Fixed select list to test for deleted view.
by sun: Fixed documentation, added test file.
#1140810 by sun, keithm: Fixed entity handling and changed stack structure.
#1140810 by keithm: Added support for all fieldable entities.
#704014 by keithm: Added support for Drupal 7.


Viewfield 6.x-2.x, xxxx-xx-xx
-----------------------------
#416922 by keithm: Fixed update_6001 to check current size < 128 before update.
#489908 by sun, keithm: Changed default value settings to field instance level.
  - $field['super_default'] is gone, which previously allowed saving nodes
    with no viewfield value, but then to use the field's configured default
    values automatically. This had an effect only for nodes that were created
    before the viewfield was created, because viewfields in nodes created after
    any field is created receive the configured default value preselected in the
    node edit form, and CCK/Field API always stores a value, even if it is the