@@ -12,9 +12,9 @@ files[] = includes/MediaInternetNoHandlerException.inc
 files[] = includes/MediaInternetValidationException.inc
 files[] = tests/media_internet.test
 
-; Information added by Drupal.org packaging script on 2016-12-09
-version = "7.x-2.0-beta14"
+; Information added by Drupal.org packaging script on 2017-01-08
+version = "7.x-2.0-rc3"
 core = "7.x"
 project = "media"
-datestamp = "1481300289"
+datestamp = "1483894746"
 
