@@ -39,7 +39,7 @@ Drupal.media.formatForm.getEditorContent = function(fieldKey) {
   // WYSIWYG and Media CKEditor modules: it should be modified to remove that
   // as soon as each module has been confirmed to provide their own implementation.
 
-  if (Drupal.wysiwyg && Drupal.wysiwyg.instances[fieldKey]) {
+  if (Drupal.wysiwyg && Drupal.wysiwyg.instances[fieldKey] && Drupal.wysiwyg.instances[fieldKey].status) {
     // Retrieve the content from the editor provided by the WYSIWYG Module.
     // Remove this case once the WYSIWYG module provides an override for this function.
     return Drupal.wysiwyg.instances[fieldKey].getContent();
@@ -55,6 +55,14 @@ Drupal.media.formatForm.getEditorContent = function(fieldKey) {
   }
 }
 
+Drupal.media.formatForm.escapeFieldInput = function(input) {
+  // This is the default implementation of an overridable function: It is
+  // intended to allow for the escaping of the user input from the format form.
+  // No escaping is done here, but this allows other modules to escape the input
+  // by overriding this function.
+  return input;
+}
+
 Drupal.media.formatForm.getOptions = function () {
   // Get all the values
   var ret = {};
@@ -63,7 +71,7 @@ Drupal.media.formatForm.getOptions = function () {
 
   $.each($('#media-wysiwyg-format-form .fieldset-wrapper *').serializeArray(), function (i, field) {
 
-    // Support multi-value select lists, which show up here with [] at the end.
+    // Support multi-value fields, which show up here with [] at the end.
     if ('[]' == field.name.slice(-2)) {
       if (typeof fieldDelta[field.name] === 'undefined') {
         fieldDelta[field.name] = 0;
@@ -74,7 +82,7 @@ Drupal.media.formatForm.getOptions = function () {
       field.name = field.name.replace('[]', '[' + fieldDelta[field.name] + ']');
     }
 
-    ret[field.name] = field.value;
+    ret[field.name] = Drupal.media.formatForm.escapeFieldInput(field.value);
 
     // When a field uses a WYSIWYG format, the value needs to be extracted and encoded.
     if (field.name.match(/\[format\]/i)) {
@@ -83,7 +91,8 @@ Drupal.media.formatForm.getOptions = function () {
 
       // Attempt to retrieve content for this field from any associated javascript rich-text editor.
       var editorContent = Drupal.media.formatForm.getEditorContent(field.key);
-      if (editorContent) {
+      // Find content or an empty string (in case existing content was removed).
+      if (editorContent || editorContent === '') {
         // Replace the already-cached value with the value from the editor.
         ret[field.name] = editorContent;
       }
