@@ -142,6 +142,7 @@ function media_wysiwyg_pre_render_text_format($element) {
   $element['#attached']['js'][] = array(
     'data' => array(
       'media' => $settings,
+      'mediaDoLinkText' => (boolean) variable_get('media_wysiwyg_use_link_text_for_filename', 1),
     ),
     'type' => 'setting',
   );
@@ -268,7 +269,14 @@ function media_wysiwyg_form_media_admin_config_browser_alter(&$form, &$form_stat
     '#title' => t('Override field types in WYSIWYG'),
     '#options' => $options,
     '#default_value' => variable_get('media_wysiwyg_wysiwyg_override_field_types', array('text', 'text_long')),
-    '#description' => t('If checked, then the field type may be overridden in the WYSIWYG editor. Not all field types (e.g. Term reference) currently support being overridden so the desired result might not be achieved.')
+    '#description' => t('If checked, then the field type may be overridden in the WYSIWYG editor. Not all field types/widgets (e.g. Term reference autocomplete) currently support being overridden so the desired result might not be achieved.')
+  );
+
+  $form['wysiwyg']['media_wysiwyg_wysiwyg_override_multivalue'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Override multi-value fields in WYSIWYG'),
+    '#description' => t('If checked, then multi-value fields may be overridden in the WYSIWYG editor. Not all field types/widgets (e.g. Term reference autocomplete) currently support being overridden so the desired result might not be achieved.'),
+    '#default_value' => variable_get('media_wysiwyg_wysiwyg_override_multivalue', FALSE),
   );
 
   $form['wysiwyg']['media_wysiwyg_use_link_text_for_filename'] = array(
@@ -552,11 +560,9 @@ function media_wysiwyg_file_displays_alter(&$displays, $file, $view_mode) {
  * Add a file type named 'WYSIWYG'.
  */
 function media_wysiwyg_entity_info_alter(&$entity_info) {
-  $entity_info['file']['view modes'] += array(
-    'wysiwyg' => array(
-      'label' => t('WYSIWYG'),
-      'custom settings' => TRUE,
-    ),
+  $entity_info['file']['view modes']['wysiwyg'] = array(
+    'label' => t('WYSIWYG'),
+    'custom settings' => TRUE,
   );
 }
 
